2nd commit : creating route/function to add animals

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> 
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento" rel="stylesheet">
     <title>Management of our animals</title>
 </head>
 <body>
@@ -10,18 +12,20 @@
         <nav>
             <ul class="navigation">
                 <li><a href="/">Home</a></li>
-                <li> <a href="/delete_book">Delete</a></li>
-                <li> <a href="/view_book">Edit</a></li>
-                <li> <a href="/view_book">Search</a></li>
+                <li> <a href="/view_vet">View them all</a></li>
+                <li> <a href="/search_vet">Search</a></li>
             </ul>
         </nav>
     </header>
-</body>
-<footer>
+    <h1>One app to rule them all</h1>
 
+    {% block content %}
+
+{% endblock %}
+</body>
+
+<footer>
+    <p>Because all animals matter</p>
 </footer>
 </html>
 
-{{% block content %}}
-
-{{% endblock %}}
