db and sql in flask environment connected, tables show results in command line

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,10 @@
         <nav>
             <ul class="navigation">
                 <li><a href="/">Home</a></li>
+                <li> <a href="/index/add">Add new animal</a></li>
                 <li> <a href="/view_vet">View them all</a></li>
                 <li> <a href="/search_vet">Search</a></li>
+
             </ul>
         </nav>
     </header>
