Add new animal function successful, creates animal id and owner id, adds owner id to animal listing

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,14 @@
         <nav>
             <ul class="navigation">
                 <li><a href="/">Home</a></li>
-                <li> <a href="/index/add">Add new animal</a></li>
-                <li> <a href="/view_vet">View them all</a></li>
-                <li> <a href="/search_vet">Search</a></li>
+                <li> <a href="/new_client">Add new client</a></li>
+                <li> <a href="/view_">View them all</a></li>
+                <li> <a href="/search">Search</a></li>
 
             </ul>
         </nav>
     </header>
-    <h1>One app to rule them all</h1>
+    <!-- <h1>One app to rule them all</h1> -->
 
     {% block content %}
 
