Search function works

--- a/templates/new.html
+++ b/templates/new.html
@@ -2,7 +2,7 @@
 
 <h1>Add a new animal to the system</h1>
 
-<form action="/save_new_client" method="post">
+<form action="/new_client/save_new_client" method="post">
     <label for="animal">Name:</label>
     <textarea name="name" id="name" rows="1"></textarea>
 
