--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %} 
 
-<form action="/search_for_client" method="post">
+<form action="/search/search_action" method="post">
     <label for="last_name">Last Name:</label>
     <textarea name="last_name" id="last_name" rows="1"></textarea>
 
