created vet tables and added text area to new animal form

--- a/templates/new.html
+++ b/templates/new.html
@@ -24,6 +24,13 @@
     <label for="owner">Phone number:</label> 
     <textarea name="number" id="number" rows="1"></textarea>
 
+    <label for="vet">Choose Vet:</label> 
+    <textarea name="choose_vet" id="choose_vet" rows="1"></textarea>
+    <!-- <select>
+      <option value=”Vet 1">Mr Roger Rabbit</option>
+      <option value=”Vet 2”>Mrs Mickey Mouse</option>
+      </select> -->
+
 
     <input class="btn btn--action" type='submit' value="submit">
   </form>
