--- a/static/style.css
+++ b/static/style.css
@@ -10,9 +10,15 @@ body{
 
 footer{
     border: 2px;
+    position: absolute;
+    left: 0%;
+    bottom: 0%;
     border-color: black;
     border-style: dotted;
     text-align: center;
     font-size: 25px;
-    
+    width: 100%;
+    height:100px;
+    padding-top: 10px;    
 }
+/* footer code works */
