--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
 
-
+<h1>Welcome to the Mighty Paws Vet Practice</h1>
+<h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
 {% endblock %}
