refactored def save()function, added function to select vet by id

--- a/templates/new.html
+++ b/templates/new.html
@@ -9,8 +9,8 @@
     <label for="animal">DOB:</label>
     <textarea name="DOB" id="DOB" rows="1"></textarea>
     
-    <label for="animal">Breed:</label> 
-    <textarea name="breed" id="breed" rows="1"></textarea>
+    <label for="animal">Type:</label> 
+    <textarea name="breed" id="type" rows="1"></textarea>
     
     <label for="animal">Treatments:</label> 
     <textarea name="treatments" id="treatments" rows="1"></textarea>
