--- a/templates/view_client.html
+++ b/templates/view_client.html
@@ -5,7 +5,7 @@
     <h3>{{owner.first_name}} {{owner.last_name}}, {{owner.phone}} <h3>
 
     {% for animal in animals: %}
-        <h3>{{animal.name}} {{animal.dob}}, {{animal.breed}}, {{animal.treatments}} <h3>
+        <h3>{{animal.name}} {{animal.dob}}, {{animal.species}}, {{animal.treatments}} <h3>
 
             <button type="submit" formaction="/search/{{owner.id}}">Update</button>
             <button type="submit" formaction="/search/{{owner.id}}">Add animal</button>
