update function works, details of owner can be changed and appear in db" git push

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <li><a href="/">Home</a></li>
                 <li> <a href="/new_client">Add new client</a></li>
                 <li> <a href="/search">Search</a></li>
-
+<!-- make list type none and put them in one row  -->
             </ul>
         </nav>
     </header>
