--- a/templates/index.html
+++ b/templates/index.html
@@ -3,3 +3,6 @@
 <h1>Welcome to the Mighty Paws Vet Practice</h1>
 <h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
 {% endblock %}
+
+
+<!-- add images of cat, chicken and dog here, create round images with css  -->
