--- a/templates/search.html
+++ b/templates/search.html
@@ -4,9 +4,8 @@
     <label for="last_name">Last Name:</label>
     <textarea name="last_name" id="last_name" rows="1"></textarea>
 
-    <!-- <label for="name">Name of Animal:</label>
-    <textarea name="name" id="name" rows="1"></textarea> -->
-
     <input class="btn btn--action" type='submit' value="submit">
 
 {% endblock %}
+
+<!-- THIS CODE WORKS, DO NOT CHANGE ! -->
