--- a/templates/view_clients.html
+++ b/templates/view_clients.html
@@ -4,7 +4,7 @@
     {% for owner in owners: %}
         <form action="/search" method="get">
 
-            <h3>{{owner.first_name}} {{owner.last_name}}, {{owner.phone}} <h3>
+            <h3>{{owner.first_name}} {{owner.last_name}}, phone number {{owner.phone}} <h3>
             
             <button type="submit" formaction="/search/{{owner.id}}">Select</button>
             
