removed pycache from root folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 <h1>Welcome to the Mighty Paws Vet Practice</h1>
 <h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
+
+<img src="/static/images/elliot.jpg" alt="Photo of a tabby cat">
+
+
 {% endblock %}
 
 
