--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> 
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">  -->
+    <link rel="stylesheet" href="/static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento" rel="stylesheet">
     <title>Management of our animals</title>
 </head>
