--- a/templates/base.html
+++ b/templates/base.html
@@ -15,13 +15,14 @@
                 <li><a href="/">Home</a></li>
                 <li> <a href="/new_client">Add new client</a></li>
                 <li> <a href="/search">Search</a></li>
+                <li> <a href="/all">View All clients</a></li>
 <!-- make list type none and put them in one row  -->
             </ul>
         </nav>
     </header>
     <!-- <h1>One app to rule them all</h1> -->
 
-    {% block content %}
+{% block content %}
 
 {% endblock %}
 </body>
