--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
 <h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
 
 <img src="/static/images/elliot.jpg" alt="Photo of a tabby cat">
+<img src="/static/images/chicken.jpg" alt="Photo of a rescued chicken">
+<img src="/static/images/pig.jpg" alt="Photo of a rescued pig">
+<img src="/static/images/dog.jpg" alt="Photo of a dog with funny ears">
 
 
 {% endblock %}
