--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<h1>You have delete - > {{owner.first_name}} {{owner.last_name}} </h1>
+<h1> - > {{owner.first_name}} {{owner.last_name}} has successfully been removed</h1>
 
 
 {% endblock %}
