--- a/templates/new.html
+++ b/templates/new.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% block content %} 
 
+<div class="add_new">
 <h1>Add a new animal to the system</h1>
 
 <form action="/new_client/save_new_client" method="post">
@@ -35,6 +36,7 @@
 
     <input class="btn btn--action" type='submit' value="submit">
   </form>
+  </div>
 
 <!-- form to input details of owner and animal works, vets are listed in the drop down menu -->
 <!-- THIS FORM WORKS, DO NOT CHANGE CODE  ! -->
