--- a/static/style.css
+++ b/static/style.css
@@ -1,49 +1,113 @@
-h1 {
-    font-size: 48px;
-    text-align: center;
-    font-family: "Sacramento", sans-serif;
-}
- h2{
-     text-align: center;
-     font-family: "Sacramento", sans-serif;
-     font-size: 36px;
- }
+
 
 .navigation {
 
     list-style-type: none;
-    font-size: 20px;
-    
+    font-size: 18px;
 }
 
+.navigation a{
+    float: left;
+    background-color: rgb(0, 128, 0);
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navigation a:hover{
+
+    background-color: white;
+    color: black;
+}
+
+.navigation a.active{
+    background-color: green;
+    color: white;
+}
 
 
 body{
     background-color: rgb(83, 131, 106);
+    padding-bottom: 3px;
 }
 
-footer{
-    border: 2px;
-    position: absolute;
-    left: 0%;
-    bottom: 0%;
-    border-color: black;
+h1{
+    font-family: "Sacramento", sans-serif;
+    text-align: center;
+    padding-top: 70px;
+    font-size: 40px;
+}
+
+h2{
+    font-family: "Sacramento", sans-serif;
+    font-size: 30px;
+    
+}
+
+.header{
+    font-size: 20px;
+    text-align: center;
+    font-family: "Sacramento", sans-serif;
+    padding-top: -5cm;
+}
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border: 1px;
     border-style: dotted;
     text-align: center;
-    font-size: 25px;
-    width: 100%;
-    height:100px;
-    padding-top: 10px;    
+    color: black;
+    font-size: 20px;
+    background-color: green;
 }
-/* footer code works */
 
 img{
     width: 150px;
     height: 180px;
     border-radius: 50%
-    
-
-    
-
 }
 
+.view_all{
+    text-align: left;
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+.add_new{
+    text-align: left;
+    padding-top: 2px;
+}
+
+.search_last_name{
+    text-align: left;
+    padding-top:100px;
+    font-size: 20px;
+}
+
+.vetlogo{
+    width: 20px;
+    height: 20px;
+    display: flex;
+}
+
+.owner_animal_results{
+    font-size: 15px;
+    text-align: left;
+    padding-top: -5cm;
+    
+}
+
+.owner_results{
+    font-size: 15px;
+    text-align: left;
+    padding-top: 40px;
+    
+}
+.gallery{
+  margin-left: 10cm;
+  margin-top: 3cm;
+}
