--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %} {% block content %}
 
-<h1>Welcome to the Mighty Paws Vet Practice</h1>
-<h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
+<div class= "header">
+    <h1>Welcome to the Mighty Paws Vet Practice</h1>
+    <h2>Paws, claws, hooves or beaks - we take care of everyone</h2>
+</div>
 
+<div class="gallery">
 <img src="/static/images/elliot.jpg" alt="Photo of a tabby cat">
 <img src="/static/images/chicken.jpg" alt="Photo of a rescued chicken">
 <img src="/static/images/pig.jpg" alt="Photo of a rescued pig">
-<img src="/static/images/dog.jpg" alt="Photo of a dog with funny ears">
-
+<img src="/static/images/papi.jpg" alt="Photo of a dog">
+</div>
 
 {% endblock %}
 
