--- a/templates/search.html
+++ b/templates/search.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %} {% block content %} 
 
+<div class="search_last_name">
 <form action="/search/search_action" method="post">
-    <label for="last_name">Last Name:</label>
+    <label for="last_name">Enter owner's last name:</label>
     <textarea name="last_name" id="last_name" rows="1"></textarea>
 
     <input class="btn btn--action" type='submit' value="submit">
+</div>
 
 {% endblock %}
 
